# hot-reloading-sample

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  host.cpp  main.c
app/app-code/: CMakeLists.txt  main.c
app/app-lib/: CMakeLists.txt
editor/: CMakeLists.txt  editor.c  editor.h
engine/: CMakeLists.txt  base.h  engine.c  engine.h  engine_defines.h  lib.h  sample_system.c  sample_system.h
engine-editor/: CMakeLists.txt  host.cpp
engine-editor/editor/: CMakeLists.txt  cimgui_base.h  editor.h  editor_base.h  editor_defines.h  imgui_bgfx_sdl_system.c  imgui_bgfx_sdl_system.h  imgui_dockspace_system.c  imgui_dockspace_system.h
engine/components/: bgfx_components.c  bgfx_components.h  gui.c  gui.h  input.c  input.h  sdl_window.c  sdl_window.h
engine/imgui_bgfx/: imgui_impl_bgfx.cpp  imgui_impl_bgfx.h
engine/systems/: bgfx_system.c  bgfx_system.h  imgui_bgfx_sdl_system.h  sdl_system.c  sdl_system.h
lib/: CMakeLists.txt  lib.c  lib.h
lib-host/: CMakeLists.txt
